<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorSetupWizard">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/closeSetup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@null"
                android:padding="10dp"
                android:src="@drawable/dismiss" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:tag="@string/mallory_book"
                android:text="@string/notifi_settings"
                android:textColor="@color/blue"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/notificationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:tag="@string/mallory_book"
        android:text="@string/notificationText"
        android:textColor="@color/notificationTextColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/pushNotification"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:background="@drawable/toggle_selector"
            android:text="@string/pushNotifications"
            android:textSize="0dp" />

        <TextView
            android:id="@+id/toggleTextPush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:tag="@string/mallory_book"
            android:text="@string/pushNotifications" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/pushSms"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/toggle_selector"
            android:text="@string/sms"
            android:textSize="0dp" />


        <TextView
            android:id="@+id/toggleTextSms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:tag="@string/mallory_book"
            android:text="@string/sms" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/pushemail"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/toggle_selector"
            android:text="@string/email"
            android:textSize="0dp" />

        <TextView
            android:id="@+id/toggleTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:tag="@string/mallory_book"
            android:text="@string/emailToggleText" />
    </LinearLayout>

</LinearLayout>