<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#55B259"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="35dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/swaprequest_confirmed" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:tag="@string/mallory_book_regular"
                android:text="@string/swap_req_sucess"
                android:textColor="#ffffff"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="@string/mallory_medium_regular"
                android:text="PLEASE NOTE"
                android:textColor="#424448"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:tag="@string/mallory_book_regular"
                android:text="@string/swap_req_text"
                android:textColor="#424448"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/returnBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_selector"
        android:tag="@string/mallory_book_regular"
        android:text="Return to My Schedule"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16sp" />

</LinearLayout>