<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorSetupWizard"
        android:padding="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/closeSetup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@null"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:src="@drawable/dismiss" />

            <TextView
                android:id="@+id/titletext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:tag="@string/mallory_book"
                android:text="Legion Terms of Use"
                android:textColor="@color/blue"
                android:textSize="@dimen/bigger_textsize" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:fadingEdge="none"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lastDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:tag="@string/mallory_book_Italic"
                android:text="@string/lastUpdated"
                android:textColor="#212121"
                android:textSize="@dimen/small_textsize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="@string/mallory_medium_regular"
                    android:text="@string/termsTitle"
                    android:textColor="#4D4848"
                    android:textSize="@dimen/biggest_textsize" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="3dp"
                    android:tag="@string/mallory_book_regular"
                    android:text="@string/termsPara"
                    android:textColor="#4D4848"
                    android:textSize="@dimen/medium_textsize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="@string/mallory_medium_regular"
                    android:text="@string/termsTitle"
                    android:textColor="#4D4848"
                    android:textSize="@dimen/biggest_textsize" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="3dp"
                    android:tag="@string/mallory_book_regular"
                    android:text="@string/termsPara"
                    android:textColor="#4D4848"
                    android:textSize="@dimen/medium_textsize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="@string/mallory_medium_regular"
                    android:text="@string/termsTitle"
                    android:textColor="#4D4848"
                    android:textSize="@dimen/biggest_textsize" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="3dp"
                    android:tag="@string/mallory_book_regular"
                    android:text="@string/termsPara"
                    android:textColor="#4D4848"
                    android:textSize="@dimen/medium_textsize" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>